Fix issue with content overflowing The buttons on the hero section were not wrapping causing them to overflow on the screen

--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -76,6 +76,7 @@
 		display: flex;
 		align-items: center;
 		gap: 0.5rem;
+		flex-wrap: wrap;
 
 		button {
 			white-space: nowrap;
